k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: JasaroskasApp # Change this to your app name
  namespace: m324-csbe-jasaroska # Ask the teacher for the namespace name
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: JasaroskasApp # Change this to your app name
