k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: JasaroskasApp # Change this to your app name
  namespace: m324-csbe-jasaroska # Ask the teacher for the namespace name
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jasaroska.m324.hackerman.ch # Change this to your base url example: my-subdomain.m324.hackerman.ch
      secretName: jasaroska.m324.hackerman.ch-tls # Change this to your base url example: my-subdomain.m324.hackerman.ch-tls
  rules:
    - host: jasaroska.m324.hackerman.ch # Change this to your base url example: my-subdomain.m324.hackerman.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: JasaroskasApp # Change this to your app name
                port:
                  number: 80
